added google analytics code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,8 @@
   <link rel="stylesheet" href="{{ site.url }}/css/normalize.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.url }}/css/cayman.css">
+  
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </head>
